crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-of-mutating-last-spread.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-of-mutating-last-spread.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(2);
	const { timestamp } = t0;
	let t1;
	if ($[0] !== timestamp) {
		const a = [timestamp];
		const it = { [Symbol.iterator]() {
			a.pop();
			return [][Symbol.iterator]();
		} };
		t1 = new Date(...Array.of(...a, ...it));
		$[0] = timestamp;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
